include/glint/glint.h

typedef struct glint_context* glint_t;
enum glint_quality {
    GLINT_QUALITY_SPEED  = 0,  // no masking, fastest
    GLINT_QUALITY_NORMAL = 1,  // gain correction + headroom SF (default)
    GLINT_QUALITY_BEST   = 2,  // multi-factor search + psychoacoustic masking
};
struct glint_config {
    int sample_rate;
    int num_channels;
    enum glint_mode mode;
    int bitrate;
    enum glint_path path;  // signal path selection (0 = default)
    enum glint_simd simd;  // SIMD selection (0 = auto-detect)
    enum glint_quality quality;  // quality mode (0 = speed, 1 = normal)
    enum glint_vbr vbr;           // VBR mode (0 = CBR, 1 = VBR)
    int vbr_quality;               // VBR quality 0-9 (0=best, 9=worst), only used when vbr=1
};
int            glint_check_config(int sample_rate, int bitrate);
glint_t        glint_create(const struct glint_config* cfg);
int            glint_samples_per_frame(glint_t enc);
// Encode one frame. channel_data[ch] points to samples_per_frame samples.
const uint8_t* glint_encode(glint_t enc, const int16_t** channel_data, int* out_size);
const uint8_t* glint_encode_float(glint_t enc, const float** channel_data, int* out_size);
const uint8_t* glint_flush(glint_t enc, int* out_size);
void           glint_destroy(glint_t enc);
// ---------------------------------------------------------------------------
// AAC-LC encoder (phase 1: long blocks, CBR-average, ADTS output).
// Independent of the MP3 encoder above. One encode call consumes exactly
// glint_aac_samples_per_frame() samples per channel (1024) and returns one
// ADTS frame. Call glint_aac_flush once at end of stream — the MDCT looks
// back one block, so the final 1024 samples are emitted by the flush frame.
// Sample rates: 8000..96000 (the 12 standard AAC rates); 1-2 channels;
// bitrate in kbps.
// ---------------------------------------------------------------------------

typedef struct glint_aac_context* glint_aac_t;
// ZERO-INITIALIZE this struct before filling it (memset or `= {0}`): the
// reserved tail lets future releases add options without breaking the ABI,
// and zeroed reserved fields select defaults.
struct glint_aac_config {
    int sample_rate;
    int num_channels;
    int bitrate;        // kbps; under VBR this is only the per-frame CAP hint
    enum glint_quality quality;  // SPEED = no noise shaping; NORMAL/BEST = psy
                                 // NMR shaping loop (BEST iterates further)
    int vbr;            // 0 = CBR (default), 1 = constant-quality VBR
    int vbr_quality;    // 0 (best/largest) .. 9 (worst/smallest), when vbr=1
    int reserved[4];    // must be zero
};
glint_aac_t    glint_aac_create(const struct glint_aac_config* cfg);
int            glint_aac_samples_per_frame(glint_aac_t enc);
const uint8_t* glint_aac_encode(glint_aac_t enc, const int16_t** channel_data, int* out_size);
const uint8_t* glint_aac_flush(glint_aac_t enc, int* out_size);
void           glint_aac_destroy(glint_aac_t enc);